--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ subtitle: "New hotness from the HTML5 world"
       <ul class="clearfix">
         {% for post in site.posts %}
           <li>
-            <a href="{{ post.url | prepend: site.baseurl }}">
+            <a href="{{ post.url | prepend: site.url }}">
               <span class="left">
               {% for author in post.authors %}
                 {% include avatar.html author=author%}
