Adding meta information in head

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Updates"
+title: "HTML5 Updates"
 subtitle: "New hotness from the HTML5 world"
 ---
 <article class="content-wrapper">
