adding assets pipeline

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
       <div class="content-wrapper">
         <div class="container">
           <div id="oops">
-            <img src="/images/HTML5_Badge_256.png" title="I pity da foo who doesn't use HTML5!" alt="I pity da foo who doesn't use HTML5!" width="256" height="256">
+            <img src="{% asset_path HTML5_Badge_256.png %}" title="I pity da foo who doesn't use HTML5!" alt="I pity da foo who doesn't use HTML5!" width="256" height="256">
             <h2>Oops!! We didn't find any HTML5 resources for ya.</h2>
           </div>
         </div>
