adding app.yaml for app engine

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ subtitle: "New hotness from the HTML5 world"
     </div>
     <div class="pager">
       {% if paginator.previous_page_path %}
-      <a href="{{site.url}}{{previous_page_path}}">Previous</a>
+      <a href="{{site.url}}{{paginator.previous_page_path}}">Previous</a>
       {% else %}
       <a href="{{site.url}}">Start</a>
       {% endif %} | {% if paginator.next_page_path %}
